# OFD

./: .gitignore  C-C++实现GB-T33190-2016完整评估报告.md  CMakeLists.txt  CMakePresets.json  GB-T33190-2016_原文获取说明与实施模板.md  Golang实现GB-T33190-2016完整评估报告.md  OFD_GUI工具技术路线与产品规划.md  OFD编辑器PRD骨架.md  OFD编辑器技术架构设计.md  国内OFD文档产品调研与功能优势分析.md
.github/workflows/: build-windows-ofd-gui.yml
libOFD/: CMakeLists.txt  README.md
libOFD/examples/: ofd_pdf_convert_cli.cpp
libOFD/include/libofd/: document.h  libofd.h  package_reader.h  signature.h  status.h
libOFD/src/: crypto_provider.cpp  crypto_provider.h  document.cpp  libofd_c_api.cpp  package_reader.cpp  signature.cpp  xml_utils.cpp  xml_utils.h
libOFD/src/pdf_engine/: pdf_engine.cpp  pdf_engine.h
libOFD/tests/: api_contract_test.cpp  builtin_convert_roundtrip_test.cpp  convert_provider_test.cpp  external_provider_test.cpp  layout_pdf_engine_test.cpp  lifecycle_test.cpp  pdf_engine_external_image_decoder_test.cpp  pdf_engine_image_font_test.cpp  pdf_engine_ofd_to_pdf_path_color_test.cpp  pdf_engine_path_object_test.cpp  pdf_engine_pdf_to_ofd_graphics_state_test.cpp  pdf_engine_pdf_to_ofd_text_geometry_test.cpp  pdf_engine_png_bmp_test.cpp  real_world_convert_quality_test.cpp  run_conversion_check.sh  smoke_test.cpp
libOFD/tests/data/: OFD.xml  a-fixed.ofd  bank-roundtrip.ofd  bank.ofd
libOFD/tests/data/ExampleDoc/: Document.xml
libOFD/tests/data/bank-fixed.pdf.libofd_signs/: README.txt
libOFD/tests/data/bank-fixed.pdf.libofd_signs/Signs/: Signatures.xml
libOFD/tests/data/bank-fixed.pdf.libofd_signs/Signs/Sign_0/: Seal.esl  Signature.xml
ofd-gui/: CMakeLists.txt  README-Windows-Build.md
ofd-gui/src/: main.cpp  main_window.cpp  main_window.h  ofd_facade.cpp  ofd_facade.h
